force-app/main/default/objects/Funnel_Scorecard__c/Funnel_Scorecard__c.object-meta.xml
<CustomObject>
    <description>Miller Heiman Funnel Scorecard</description>
    <label>Funnel Scorecard</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Funnel Scorecard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funnel Scorecard</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>