force-app/main/default/objects/Funnel_Scorecard__c/fields/B10_Client_innovative_open_to_change__c.field-meta.xml
<CustomField>
    <fullName>B10_Client_innovative_open_to_change__c</fullName>
    <description>The client is innovative and open to change</description>
    <inlineHelpText>The client recognizes and communicates the need for change to meet their business expectations</inlineHelpText>
    <label>B10 Client innovative &amp; open to change</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>