force-app/main/default/objects/Funnel_Scorecard__c/fields/B10_Open_honest_communication_style__c.field-meta.xml
<CustomField>
    <fullName>B10_Open_honest_communication_style__c</fullName>
    <description>- Makes decisions quickly and We have access to the EBI
- Describe their business, the state of their business, their competition</description>
    <inlineHelpText>- Makes decisions quickly and We have access to the EBI
- Describe their business, the state of their business, their competition</inlineHelpText>
    <label>B10 Open/honest communication style</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>