force-app/main/default/objects/Funnel_Scorecard__c/fields/B1_Service_relationship_trumps_price__c.field-meta.xml
<CustomField>
    <fullName>B1_Service_relationship_trumps_price__c</fullName>
    <description>-Describe their current vendor relationship; provide examples. 
-Examples where fees where high, but service/relationship proved most important.</description>
    <inlineHelpText>-Describe their current vendor relationship; provide examples. 
-Examples where fees where high, but service/relationship proved most important.</inlineHelpText>
    <label>B1 Service/relationship trumps price</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>