force-app/main/default/objects/Funnel_Scorecard__c/fields/B1_Willing_to_invest_in_viable_solutions__c.field-meta.xml
<CustomField>
    <fullName>B1_Willing_to_invest_in_viable_solutions__c</fullName>
    <description>The client is willing to invest in viable solutions</description>
    <inlineHelpText>There is a need and a budget and the EBI is willing to allocate resources</inlineHelpText>
    <label>B1 Willing to invest in viable solutions</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>