force-app/main/default/objects/Funnel_Scorecard__c/fields/B2_Client_values_long_term_relationship__c.field-meta.xml
<CustomField>
    <fullName>B2_Client_values_long_term_relationship__c</fullName>
    <description>The client seeks and values a collaborative, long term relationship</description>
    <inlineHelpText>The client is willing to have a strategic discussion to solve problems and pursue long term growth, and displays flexibility and commitment towards a shared solution.</inlineHelpText>
    <label>B2 Client values long term relationship</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>