force-app/main/default/objects/Funnel_Scorecard__c/fields/B2_Values_all_4_Pillars__c.field-meta.xml
<CustomField>
    <fullName>B2_Values_all_4_Pillars__c</fullName>
    <description>Client statements supporting value to all 4 pillars (i.e. no points for a GC who loves 2 &amp; 3 but not 1 &amp; 4)</description>
    <inlineHelpText>Client statements supporting value to all 4 pillars (i.e. no points for a GC who loves 2 &amp; 3 but not 1 &amp; 4)</inlineHelpText>
    <label>B2 Values all 4 Pillars</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>