force-app/main/default/objects/Funnel_Scorecard__c/fields/B3_Is_in_Trouble_mode__c.field-meta.xml
<CustomField>
    <fullName>B3_Is_in_Trouble_mode__c</fullName>
    <description>Client description of their customers’ dissatisfaction: poor/missed deliveries/timelines/budget, etc.</description>
    <inlineHelpText>Client description of their customers’ dissatisfaction: poor/missed deliveries/timelines/budget, etc.</inlineHelpText>
    <label>B3 Is in Trouble mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>