force-app/main/default/objects/Funnel_Scorecard__c/fields/B3_SHC_footprint_is_aligned_with_clients__c.field-meta.xml
<CustomField>
    <fullName>B3_SHC_footprint_is_aligned_with_clients__c</fullName>
    <description>Our geographic footprint is aligned with the client&#39;s business</description>
    <inlineHelpText>Commercial:  We have the ability to deliver SHC products and services where the client conducts their business.  
A&amp;E:  We have the ability to deliver SHC products, services and capabilities where the client conducts their business.</inlineHelpText>
    <label>B3 SHC footprint is aligned with clients</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>