force-app/main/default/objects/Funnel_Scorecard__c/fields/B4_Client_gives_credit_for_brand_loyalty__c.field-meta.xml
<CustomField>
    <fullName>B4_Client_gives_credit_for_brand_loyalty__c</fullName>
    <description>The client gives credit for brand loyalty</description>
    <inlineHelpText>Our brands and capabilities enhance the end user&#39;s perception of the client&#39;s business</inlineHelpText>
    <label>B4 Client gives credit for brand loyalty</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>