force-app/main/default/objects/Funnel_Scorecard__c/fields/B4_High_pride_focus_on_their_Brand__c.field-meta.xml
<CustomField>
    <fullName>B4_High_pride_focus_on_their_Brand__c</fullName>
    <description>- (i.e. will care more about Kenmore) 
- How Client describes their brand value – How it match our Brand pride
- Evidence their Client demographic values their Brand</description>
    <inlineHelpText>- (i.e. will care more about Kenmore) 
- How Client describes their brand value – How it match our Brand pride
- Evidence their Client demographic values their Brand</inlineHelpText>
    <label>B4 High pride/focus on their Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>