force-app/main/default/objects/Funnel_Scorecard__c/fields/B5_Financial_Strength_is_creditworthy__c.field-meta.xml
<CustomField>
    <fullName>B5_Financial_Strength_is_creditworthy__c</fullName>
    <description>The client has financial strength and is creditworthy</description>
    <inlineHelpText>Commercial: The legal entity has been pre-assessed and / or approved by SHC credit partners/finance/etc as applicable
A&amp;E:1) The legal entity has been pre-assessed and / or approved by Credit/Finance/etc.  2)The client has a reject rate of less than 3%</inlineHelpText>
    <label>B5 Financial Strength &amp; is creditworthy</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>