force-app/main/default/objects/Funnel_Scorecard__c/fields/B5_Operates_in_our_core_market_segments__c.field-meta.xml
<CustomField>
    <fullName>B5_Operates_in_our_core_market_segments__c</fullName>
    <description>SF/MF/EDU/HOSP/PM)  Yes/No</description>
    <inlineHelpText>SF/MF/EDU/HOSP/PM)  Yes/No</inlineHelpText>
    <label>B5 Operates in our core market segments</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>