force-app/main/default/objects/Funnel_Scorecard__c/fields/B6_Can_see_SHC_value_prop_in_diff_light__c.field-meta.xml
<CustomField>
    <fullName>B6_Can_see_SHC_value_prop_in_diff_light__c</fullName>
    <description>The client is open to seeing SHC value proposition in a different light</description>
    <inlineHelpText>The client seeks broader solutions from SHC - Breadth / Depth / Product Services</inlineHelpText>
    <label>B6 Can see SHC value prop in diff light</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>