force-app/main/default/objects/Funnel_Scorecard__c/fields/B6_Complex_operational_logistic_needs__c.field-meta.xml
<CustomField>
    <fullName>B6_Complex_operational_logistic_needs__c</fullName>
    <description>- Evidence of challenges with multiple locations, delivery needs, billing issues, etc.
- More complex =  better we can support) 
- An indication of valuing multiple ordering options (AM, NSC, Ecommerce)</description>
    <inlineHelpText>- Evidence of challenges with multiple locations, delivery needs, billing issues, etc.
- More complex =  better we can support) 
- An indication of valuing multiple ordering options (AM, NSC, Ecommerce)</inlineHelpText>
    <label>B6 Complex operational/logistic needs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>