force-app/main/default/objects/Funnel_Scorecard__c/fields/B7_L_term_profitable_rev_for_investment__c.field-meta.xml
<CustomField>
    <fullName>B7_L_term_profitable_rev_for_investment__c</fullName>
    <description>We will get long term profitable revenue when we make an investment in this account</description>
    <inlineHelpText>Commercial: We will receive $250K / year over a minimum 2 year period.
A&amp;E: Within a year&#39;s time the SSO has the ability to generate over 10,000 calls annually with a minimum BOP of 15%.</inlineHelpText>
    <label>B7 L-term profitable rev for investment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>