force-app/main/default/objects/Funnel_Scorecard__c/fields/B7_Multiple_product_category_needs__c.field-meta.xml
<CustomField>
    <fullName>B7_Multiple_product_category_needs__c</fullName>
    <description>- Provide knowledge of understanding their business, customers
- Examples of having and valuing service and parts needs</description>
    <inlineHelpText>- Provide knowledge of understanding their business, customers
- Examples of having and valuing service and parts needs</inlineHelpText>
    <label>B7 Multiple product category needs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>