force-app/main/default/objects/Funnel_Scorecard__c/fields/B8_Client_buys_the_way_we_want_them_to__c.field-meta.xml
<CustomField>
    <fullName>B8_Client_buys_the_way_we_want_them_to__c</fullName>
    <description>The client buys the way we want them to</description>
    <inlineHelpText>Commercial:  The client does not currently purchase directly from a manufacturer.
A&amp;E:  The client’s method of doing business aligns with our core processes for delivery/fulfilling services.</inlineHelpText>
    <label>B8 Client buys the way we want them to</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>