force-app/main/default/objects/Funnel_Scorecard__c/fields/B8_Fiscally_stable_low_credit_risk__c.field-meta.xml
<CustomField>
    <fullName>B8_Fiscally_stable_low_credit_risk__c</fullName>
    <description>- Transparent with Funding
- Proof they’ve done business w/us, received a LOC or using/used a 3rd party LOC</description>
    <inlineHelpText>- Transparent with Funding
- Proof they’ve done business w/us, received a LOC or using/used a 3rd party LOC</inlineHelpText>
    <label>B8 Fiscally stable/low credit risk</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>