force-app/main/default/objects/Funnel_Scorecard__c/fields/B9_100K_purchases_A_C_Client_Profile__c.field-meta.xml
<CustomField>
    <fullName>B9_100K_purchases_A_C_Client_Profile__c</fullName>
    <description>Y or N</description>
    <inlineHelpText>Y or N</inlineHelpText>
    <label>B9 $100K+ purchases/A–C Client Profile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>