force-app/main/default/objects/Funnel_Scorecard__c/fields/B9_Client_engages_in_open_communication__c.field-meta.xml
<CustomField>
    <fullName>B9_Client_engages_in_open_communication__c</fullName>
    <description>The client engages in open and honest communication</description>
    <inlineHelpText>The client is willing to share strengths / red flags and will facilitate our losing fast or winning fast</inlineHelpText>
    <label>B9 Client engages in open communication</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>