force-app/main/default/objects/Funnel_Scorecard__c/fields/BI_engage_in_open_honest_communication__c.field-meta.xml
<CustomField>
    <fullName>BI_engage_in_open_honest_communication__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>How has the BI demonstrated honest, open communication?  Do they answer all of your questions completely?</inlineHelpText>
    <label>BI engage in open/honest communication</label>
    <type>Checkbox</type>
</CustomField>