force-app/main/default/objects/Funnel_Scorecard__c/fields/BI_in_trouble_mode_ready_to_take_action__c.field-meta.xml
<CustomField>
    <fullName>BI_in_trouble_mode_ready_to_take_action__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is there a time-sensitive need that affects customer&#39;s business is driving the project and the vendor choice?</inlineHelpText>
    <label>BI in trouble mode/ready to take action</label>
    <type>Checkbox</type>
</CustomField>