force-app/main/default/objects/Funnel_Scorecard__c/fields/BI_objections_id_with_clear_resolution_s__c.field-meta.xml
<CustomField>
    <fullName>BI_objections_id_with_clear_resolution_s__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does your call planner include a thorough answer to every objection?</inlineHelpText>
    <label>BI objections id with clear resolutions</label>
    <type>Checkbox</type>
</CustomField>