force-app/main/default/objects/Funnel_Scorecard__c/fields/BI_understands_aligns_with_value_prop__c.field-meta.xml
<CustomField>
    <fullName>BI_understands_aligns_with_value_prop__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>How has the BI tied our value proposition back to addressing their needs?</inlineHelpText>
    <label>BI understands &amp; aligns with value prop</label>
    <type>Checkbox</type>
</CustomField>