force-app/main/default/objects/Funnel_Scorecard__c/fields/BI_understands_appreciates_our_brand__c.field-meta.xml
<CustomField>
    <fullName>BI_understands_appreciates_our_brand__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>How has the BI demonstrated that they see value in the Kenmore/Sears brand?</inlineHelpText>
    <label>BI understands/appreciates our brand</label>
    <type>Checkbox</type>
</CustomField>