force-app/main/default/objects/Funnel_Scorecard__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <label>Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A&amp;E</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Home Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>