force-app/main/default/objects/Funnel_Scorecard__c/fields/Completed_Call_Planner__c.field-meta.xml
<CustomField>
    <fullName>Completed_Call_Planner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Have you completed a pre-call plan that includes the questions you want to ask and the selling message you want to convey?</inlineHelpText>
    <label>Completed Call Planner</label>
    <type>Checkbox</type>
</CustomField>