force-app/main/default/objects/Funnel_Scorecard__c/fields/EBI_id_along_decision_making_criteria__c.field-meta.xml
<CustomField>
    <fullName>EBI_id_along_decision_making_criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Have you identified the final decision-maker and do you know their criteria for making their selection?</inlineHelpText>
    <label>EBI id along decision making criteria</label>
    <type>Checkbox</type>
</CustomField>