force-app/main/default/objects/Funnel_Scorecard__c/fields/Funnel_Scorecard_Test__c.field-meta.xml
<CustomField>
    <fullName>Funnel_Scorecard_Test__c</fullName>
    <label>Funnel Scorecard Test</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>