force-app/main/default/objects/Funnel_Scorecard__c/fields/Funnel_Scorecard_Total_Home_Services__c.field-meta.xml
<CustomField>
    <fullName>Funnel_Scorecard_Total_Home_Services__c</fullName>
    <description>Adds up the value of all Home Service and A&amp;E Scores 
VALUE(TEXT( Scorecard_B1_through_B8__c ))+ 
VALUE(TEXT( Scorecard_B9_through_O6__c ))+ 
VALUE(TEXT( Scorecard_O7_through_O10__c ))</description>
    <formula>Scorecard_B1_through_B8__c + Scorecard_B9_through_O6__c + Scorecard_O7_through_O10__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funnel Scorecard Total Home Services</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>