force-app/main/default/objects/Funnel_Scorecard__c/fields/Identified_anti_sponsor_competition__c.field-meta.xml
<CustomField>
    <fullName>Identified_anti_sponsor_competition__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Who is your competition and who is the coach for your competition?  Have you identified the anti-sponsor?</inlineHelpText>
    <label>Identified anti-sponsor &amp; competition</label>
    <type>Checkbox</type>
</CustomField>