force-app/main/default/objects/Funnel_Scorecard__c/fields/Influential_coach_who_shares_opp_insight__c.field-meta.xml
<CustomField>
    <fullName>Influential_coach_who_shares_opp_insight__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you have a coach who can and will help you win, to the exclusion of others?</inlineHelpText>
    <label>Influential coach who shares opp insight</label>
    <type>Checkbox</type>
</CustomField>