force-app/main/default/objects/Funnel_Scorecard__c/fields/Min_1_ea_high_influence_UBI_TBI__c.field-meta.xml
<CustomField>
    <fullName>Min_1_ea_high_influence_UBI_TBI__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you have multiple contacts within the opportunity with people who will influence the decision?</inlineHelpText>
    <label>Min 1 ea: high influence UBI, TBI</label>
    <type>Checkbox</type>
</CustomField>