force-app/main/default/objects/Funnel_Scorecard__c/fields/No_RFP_or_we_wrote_it_not_matching_comps__c.field-meta.xml
<CustomField>
    <fullName>No_RFP_or_we_wrote_it_not_matching_comps__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If there is an RFP, is it specified Kenmore?</inlineHelpText>
    <label>No RFP or we wrote it/not matching comps</label>
    <type>Checkbox</type>
</CustomField>