force-app/main/default/objects/Funnel_Scorecard__c/fields/O10_BI_s_are_rated_3_or_for_the_SSO__c.field-meta.xml
<CustomField>
    <fullName>O10_BI_s_are_rated_3_or_for_the_SSO__c</fullName>
    <description>Buying influences are rated at +3 or higher for the SSO</description>
    <inlineHelpText>Commercial: Client BI&#39;s and coach acknowledge this rating level
A&amp;E: Client BI&#39;s and coach acknowledge this rating level and have communicated their support to move forward, and following through on their action commitments.</inlineHelpText>
    <label>O10 BI’s are rated +3 or &gt; for the SSO</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>