force-app/main/default/objects/Funnel_Scorecard__c/fields/O10_We_are_not_matching_comps__c.field-meta.xml
<CustomField>
    <fullName>O10_We_are_not_matching_comps__c</fullName>
    <inlineHelpText>Yes or No</inlineHelpText>
    <label>O10 We are not matching comps</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>