force-app/main/default/objects/Funnel_Scorecard__c/fields/O1_The_EBI_supports_our_solution__c.field-meta.xml
<CustomField>
    <fullName>O1_The_EBI_supports_our_solution__c</fullName>
    <description>The EBI supports our solution</description>
    <inlineHelpText>Commercial: The EBI must have a +3 rating or better and recommends our solution to other BI&#39;s
A&amp;E: The EBI must have a +3 rating or better and recommends our solution to other BI&#39;s, and will drive / facilitate to closure.</inlineHelpText>
    <label>O1 The EBI supports our solution</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>