force-app/main/default/objects/Funnel_Scorecard__c/fields/O1_Well_thought_out_B_G_Sheets_drive_SSO__c.field-meta.xml
<CustomField>
    <fullName>O1_Well_thought_out_B_G_Sheets_drive_SSO__c</fullName>
    <inlineHelpText>Blue Sheet is consistent with Scores; Possible Actions reflect internal &amp; client facing actions to increase points/remove Red Flags; Green Sheet has a solid VBR, Getting/Giving Information strategy &amp; both are reviewed by DM or RM.</inlineHelpText>
    <label>O1 Well thought-out B/G Sheets drive SSO</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>