force-app/main/default/objects/Funnel_Scorecard__c/fields/O2_Coach_identified_and_is_influential__c.field-meta.xml
<CustomField>
    <fullName>O2_Coach_identified_and_is_influential__c</fullName>
    <description>A supportive coach with a high degree of influence has been identified</description>
    <inlineHelpText>A developed coach’s criteria:1) We have credibility with them 2)They have credibility with the key BIs 3)They want our solution 4)They are willing &amp; able to take action on our behalf.  If multiple departments are involved, you need to have coaches in each</inlineHelpText>
    <label>O2 Coach identified and is influential</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>