force-app/main/default/objects/Funnel_Scorecard__c/fields/O2_EBI_Supports_our_solution__c.field-meta.xml
<CustomField>
    <fullName>O2_EBI_Supports_our_solution__c</fullName>
    <inlineHelpText>EBI acknowledges a fit between their Concept and our Solution.</inlineHelpText>
    <label>O2 EBI Supports our solution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>