force-app/main/default/objects/Funnel_Scorecard__c/fields/O3_Identified_Coach__c.field-meta.xml
<CustomField>
    <fullName>O3_Identified_Coach__c</fullName>
    <inlineHelpText>Have all 3 Criteria: 1) We have credibility with them 2) They have credibility/high degree of influence w/BI&#39;s, (3) They want us to the exclusion of all others &amp; will work on our behalf.</inlineHelpText>
    <label>O3 Identified Coach</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>