force-app/main/default/objects/Funnel_Scorecard__c/fields/O3_SHC_Uniquely_qualified_solution__c.field-meta.xml
<CustomField>
    <fullName>O3_SHC_Uniquely_qualified_solution__c</fullName>
    <description>The client views SHC as uniquely qualified to provide a differentiated solution as an investment vs. an expense</description>
    <inlineHelpText>Commercial: Client BI&#39;s have communicated that this solution adds value to what they are trying to achieve
A&amp;E: Client BI&#39;s have communicated that our solution goes beyond cost savings and adds value to their goals.</inlineHelpText>
    <label>O3 SHC Uniquely qualified solution</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>