force-app/main/default/objects/Funnel_Scorecard__c/fields/O4_Is_in_Trouble_Growth_mode__c.field-meta.xml
<CustomField>
    <fullName>O4_Is_in_Trouble_Growth_mode__c</fullName>
    <inlineHelpText>T=Probability of taking action is high (urgency) to reverse/prevent crisis; eager to find a solution removing the cause of the problem.G=They’re ready to say yes (to someone) &amp; believe more or better results can be achieved (dont confuse w/Company growth)</inlineHelpText>
    <label>O4 Is in Trouble/Growth mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>