force-app/main/default/objects/Funnel_Scorecard__c/fields/O4_We_know_the_BI_s_Win_Results__c.field-meta.xml
<CustomField>
    <fullName>O4_We_know_the_BI_s_Win_Results__c</fullName>
    <description>We know the BI&#39;s Win - Results</description>
    <inlineHelpText>We understand what corporate results the BI&#39;s want to achieve (what they buy) and have the ability to deliver them, and understand their personal wins (why they buy).</inlineHelpText>
    <label>O4 We know the BI’s Win-Results</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>