force-app/main/default/objects/Funnel_Scorecard__c/fields/O5_EBI_to_allocate_resources_for_the_SSO__c.field-meta.xml
<CustomField>
    <fullName>O5_EBI_to_allocate_resources_for_the_SSO__c</fullName>
    <description>The EBI has the ability to allocate resources for this SSO</description>
    <inlineHelpText>Client has allocated resources and budget to fund this SSO or is willing to redirect resources to fund this SSO</inlineHelpText>
    <label>O5 EBI to allocate resources for the SSO</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>